--- a/flask_auth/templates/auth/email/confirm_account.html
+++ b/flask_auth/templates/auth/email/confirm_account.html
@@ -5,7 +5,7 @@
 	<p>
 		If you initiated this confirmation, please click on the link below:
 		<br/>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ confirm_email_link }}">Confirm your email</a>.
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ confirm_account_link }}">Confirm your email</a>.
 	</p>
 	<p>If you did not initiate this confirmation, you may safely ignore this email.</p>
 {% endblock %}
