--- a/flask_auth/templates/auth/email/password_changed.html
+++ b/flask_auth/templates/auth/email/password_changed.html
@@ -3,6 +3,6 @@
 {% block message %}
 	<p>Your password has been changed.</p>
 	{% if auth.AUTH_ENABLE_FORGOT_PASSWORD %}
-		<p>If you did not initiate this password change, <a href="{{ url_for('user.forgot_password', _external=True) }}">click here to reset it</a>.</p>
+		<p>If you did not initiate this password change, <a href="{{ url_for('auth.forgot_password', _external=True) }}">click here to reset it</a>.</p>
 	{% endif %}
 {% endblock %}
