--- a/flask_auth/templates/auth/reset_password.html
+++ b/flask_auth/templates/auth/reset_password.html
@@ -7,5 +7,5 @@
 {% endblock head %}
 
 {% block container %}
-	{{ form_reset_password(url_for('auth.reset_password'), form) }}
+	{{ form_reset_password(url_for('auth.reset_password', token=token), form) }}
 {% endblock container %}
