--- a/flask_auth/templates/auth/login.html
+++ b/flask_auth/templates/auth/login.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 	<div class="text-center m-auto">
-		{{ form_login(form, url_for('auth.login', next=safe_next_url), url_for('auth.register'), url_for('auth.forgot_password'), url_for('home_page')) }}
+		{{ form_login(form, url_for('auth.login', next=safe_next_url), url_for('auth.register'), url_for('auth.forgot_password'), url_for('main.index')) }}
 	</div>
 	<div class="d-none d-lg-block">
 		{% block footer %}
